force-app/main/default/objects/Process_Switches__c/fields/Apex_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Apex_Triggers__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Apex Triggers</label>
    <type>Checkbox</type>
</CustomField>