force-app/main/default/objects/Process_Switches__c/fields/Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>Process_Builder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Process Builder</label>
    <type>Checkbox</type>
</CustomField>