force-app/main/default/objects/Process_Switches__c/fields/Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rules__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Validation Rules</label>
    <type>Checkbox</type>
</CustomField>