force-app/main/default/objects/Process_Switches__c/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Workflow</label>
    <type>Checkbox</type>
</CustomField>