force-app/main/default/objects/Process_Switches__c/listViews/Process_Switches.listView-meta.xml
<ListView>
    <fullName>Process_Switches</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Apex_Triggers__c</columns>
    <columns>Flow__c</columns>
    <columns>Process_Builder__c</columns>
    <columns>Validation_Rules__c</columns>
    <columns>Workflow__c</columns>
    <filterScope>Everything</filterScope>
    <label>Process Switches</label>
</ListView>